Fix emoji picker colors in dark mode

--- a/app/assets/stylesheets/framework/emojis.scss
+++ b/app/assets/stylesheets/framework/emojis.scss
@@ -19,7 +19,8 @@ gl-emoji {
 
 .emoji-picker-category-header {
   @include gl-sticky;
-  background-color: $white-transparent;
+  background-color: rgba($white, 0.8);
+  z-index: 1;
 }
 
 .emoji-picker-emoji {
