--- a/app/assets/stylesheets/themes/theme_helper.scss
+++ b/app/assets/stylesheets/themes/theme_helper.scss
@@ -206,6 +206,7 @@
   }
 
   .emoji-picker-category-active {
+    color: $black;
     border-bottom-color: $active-tab-border;
   }
 
